[package]
name = "gerencianet"
version = "0.1.0"
edition = "2021"
description = "Biblioteca para comunicação com o serviço de PIX da Gerencianet"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
chrono = "0.4.23"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["native-tls", "json"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["macros"] }
